--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "node-sass": "node-sass",
-    "sass": "node-sass -wr styles/main.scss ./style.css"
+    "sass": "node-sass -wr --source-map true styles/main.scss style.css"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,11 @@
   "homepage": "https://github.com/kbu715/tomorrow-house#readme",
   "dependencies": {
     "node-sass": "^5.0.0"
+  },
+  "devDependencies": {
+    "stylelint": "^13.13.1",
+    "stylelint-config-recess-order": "^2.4.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-scss": "^3.19.0"
   }
 }
